docs/styles.css
body {
    margin: 0;
    height: 100vh;
    background-color: #000;
}

.container {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1rem;

    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
        'Lucida Sans Unicode', Geneva, Verdana, sans-serif;

    color: #fff;
    text-align: center;
    padding: 1rem;
}

.message {
    color: #fff;
}

.github-link {
    display: inline-flex;
    align-items: center;
    gap: 0.5rem;

    color: rgba(255, 255, 255, 0.6);
    text-decoration: none;
}

.github-link:hover {
    color: rgba(255, 255, 255, 0.9);
}

.github-icon {
    width: 20px;
    height: 20px;
    opacity: 0.65;
}

